Fixed big with inflection spacing.

--- a/WebExport/shiloh/style.css
+++ b/WebExport/shiloh/style.css
@@ -195,6 +195,7 @@ p.direction {
   p.inflection {
     text-align: center;
     font-style: italic;
+    margin: 0;
   }
 
   p.cue {
